<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.retar.justjava.MainActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <EditText
            android:id="@+id/customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_marginBottom="@dimen/base_margin"/>

        <TextView
            android:id="@+id/toppings_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textSize="16dp"
            android:layout_marginBottom="@dimen/base_margin" />

        <CheckBox android:id="@+id/checkbox_whippedcream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:paddingLeft="24dp"
            android:textSize="16sp" />

        <CheckBox android:id="@+id/checkbox_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:paddingLeft="24dp"
            android:layout_marginBottom="@dimen/base_margin"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quantity_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textSize="16dp"
            android:layout_marginBottom="@dimen/base_margin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/base_margin">

            <Button
                android:id="@+id/decrement_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:textSize="16sp"
                android:text="-"
                android:onClick="decrement"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_quantity_value"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/increment_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:textSize="16sp"
                android:text="+"
                android:onClick="increment"/>

        </LinearLayout>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/order"
            android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>